@@ -1,3 +1,8 @@
+*rkt-0.9.0 (12 Oct 2015)
+
+  12 Oct 2015; Stefan Junker <mail@stefanjunker.de> +rkt-0.9.0.ebuild:
+  app-emulation/rkt: 0.9 version bump
+
   28 Sep 2015; Stefan Junker <mail@stefanjunker.de> rkt-9999.ebuild:
   app-emulation/rkt-9999: align with upstream configuration changes
 
